--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --red: #EB3232;
+  --gray: #EAEAEA;
+
+  --margin-s: .75rem;
+  --margin-m: 1rem;
+  --margin-l: 1.25rem;
+
+  --ff: "Inter", sans-serif;
+  --ff-title: "Saira Condensed", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing {
+  background-color: var(--gray);
+  display: grid;
+  grid-template-rows: auto 1fr auto; 
+  min-height: 100vh; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.headerBox {
+  background: url(../public/Running.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 20% 90%;
   display: flex;
-  flex-direction: column;
+  min-height: 20rem;
+  margin-bottom: 8rem;
   align-items: center;
+}
+
+.title {
+  color: var(--white);
+  font-family: var(--ff-title);
+  font-size: 3rem;
+  text-align: center;
+  width: 100%;
+  font-size: 10rem;
+  line-height: 1;
+}
+
+@media (max-width: 700px) {
+  .title {
+    font-size: 2rem;
+  }
+}
+
+.bodyBox {
+  display: flex;
+  margin-bottom: 8rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.redText {
+  color: var(--red);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.box {
+  width:1rem;
+  height:2rem;
+  background:var(--red);
+  margin: 0 1rem 1rem 0;
+}
+
+.headingBody {
+  display: flex;
+}
+
+.image {
+  object-fit: cover;
+  max-width: 50%;
+  height: 30rem;
+  padding: 0rem 2rem;
+}
+
+.text {
+  width: 50%;
+  padding-right: 5rem;
+  padding-left: 2rem;
+}
+
+.text h2 {
+  font-family: var(--ff-title);
+  margin: 0;
+}
+
+.registerButton {
+  font-family: var(--ff-title);
+  font-size: 1.5rem;
+  background-color: var(--red);
+  color: var(--white);
+  padding: 1rem;
+  width: 100%;
+  cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .bodyBox {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .text {
+    padding-left: 2rem;
+    padding-top: 2rem;
+    width: 40rem;
   }
+
+  .image {
+    max-width: 40rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .text {
+    width: 20rem;
+  }
+
+  .image {
+    max-width: 20rem;
+  }
+}
+
+.text p {
+  font-family: var(--ff);
+}
+
+.footerBox {
+  background-color: var(--black);
+  display: flex;
+  color: var(--white);
+  justify-content: space-between;
+}
+
+.footerText {
+  padding: 2rem;
+}
+
+.menu {
+  position: absolute;
+}
+
+.title {
+  position: absolute;
+}
+
+.instagramLogo {
+  width: 4rem;
+  height: 4rem;
+  filter: invert(100%);
+  padding: 2rem;
+  cursor:pointer;
 }
