--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,9 @@
 }
 
 .footerText {
-  padding: 2rem;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  font-size: 2rem;
+  font-family: var(--ff-title);
 }
 
 .menu {
@@ -154,5 +156,5 @@
   height: 4rem;
   filter: invert(100%);
   padding: 2rem;
-  cursor:pointer;
+  cursor: pointer;
 }
